--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <header class="header">
             <nav class="header__nav">
                 <div class="header__nav__logo">
-                    <a href="#">Aaron dev</a>
+                    <a href="./index.html">Aaron dev</a>
                 </div>
                 <div>
                     <ul class="header__nav__links">
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">SERVICES</a></li>
-                        <li><a href="#">PORTFOLIO</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="https://aaron-bukasa.github.io/Aaron_bukasa-Curriculum_vitae" target="_blank">ABOUT</a></li>
+                        <li><a href="./pages/services.html">SERVICES</a></li>
+                        <li><a href="./pages/portfolio.html">PORTFOLIO</a></li>
+                        <li><a href="./pages/contact.html">CONTACT</a></li>
                     </ul>
                     <div class="header__nav__btns">
                         <div class="btn__theme">
@@ -65,36 +65,36 @@
                 <h2 class="services__title">SERVICES</h2>
                 <div class="services__content">
                     <div class="gestion__fin">
-                        <a href="#">
+                        <a href="./pages/services.html#gestion__fin">
                             <h3>
                                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M320-414v-306h120v306l-60-56-60 56Zm200 60v-526h120v406L520-354ZM120-216v-344h120v224L120-216Zm0 98 258-258 142 122 224-224h-64v-80h200v200h-80v-64L524-146 382-268 232-118H120Z"/></svg>
                                 Gestion financière
                             </h3>
                             <p>Je suis un gestionnaire financier expérimenté avec une passion pour aider les entreprises à atteindre leurs objectifs financiers. Je maîtrise les dernières techniques et tendances en matière de gestion financière, et je suis toujours à la recherche de nouvelles façons d'améliorer mes services...</p>
-                            <a href="#" class="more">Voir plus</a>
+                            <p class="more">Voir plus</p>
                         </a>
                     </div>
                     <div class="dev__web">
-                        <a href="#">
+                        <a href="./pages/services.html#dev_web">
                             <h3>
                                 <svg height="800px" width="800px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-                                viewBox="0 0 512 512" xml:space="preserve">
-                                <circle cx="256" cy="256" r="256"/>
+                                viewBox="0 0 512 512" xml:space="preserve" stroke="#ffffff">
+                                <circle cx="256" cy="256" r="256" />
                                 <g>
-                                <path style="fill:#FFFFFF;" d="M213.12,319.776L99.872,270.544V243.28l113.248-49.008v32.112l-79.008,30.208l79.008,31.328V319.776
-                                z"/>
-                                <path style="fill:#FFFFFF;" d="M223.6,341.408l40.912-170.832h23.776l-41.36,170.832H223.6z"/>
-                                <path style="fill:#FFFFFF;" d="M298.768,319.904V288l79.104-31.104l-79.104-30.752V194.48l113.36,49.008v27.04L298.768,319.904z"/>
+                                <path d="M213.12,319.776L99.872,270.544V243.28l113.248-49.008v32.112l-79.008,30.208l79.008,31.328V319.776
+                                z" fill="#ffffff" />
+                                <path d="M223.6,341.408l40.912-170.832h23.776l-41.36,170.832H223.6z"/>
+                                <path d="M298.768,319.904V288l79.104-31.104l-79.104-30.752V194.48l113.36,49.008v27.04L298.768,319.904z" fill="#ffffff" />
                                 </g>
                                 </svg>
                                 développement web
                             </h3>
                             <p>Développeur Web expérimenté avec une expertise en conception, développement et maintenance de sites Web et d'applications Web. Maîtrise des technologies HTML, CSS, JavaScript, PHP, MySQL et React.Je suis spécialisé dans la création de sites Web et d'applications Web de haute qualité qui sont à la fois attrayants...</p>
-                            <a href="#" class="more">Voir plus</a>
+                            <p class="more">Voir plus</p>
                         </a>
                     </div>
                     <div class="dev__logiciel">
-                        <a href="#">
+                        <a href="./pages/services.html#dev__logiciel">
                             <h3>
                                 <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" 
                                 width="800px" height="800px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
@@ -106,7 +106,7 @@
                                 développement logiciel
                             </h3>
                             <p>Je suis un développeur logiciel expérimenté avec une passion pour créer des applications logicielles innovantes et efficaces. Je maîtrise les dernières technologies et tendances du développement logiciel, et je suis toujours à la recherche de nouvelles façons d'améliorer mon travail...</p>
-                            <a href="#" class="more">Voir plus</a>
+                            <p class="more">Voir plus</p>
                         </a>
                     </div>
                 </div>
@@ -119,65 +119,69 @@
             </section>
         </main>
         <footer>
-            <h2>CONTACT</h2>
             <div class="contact">
-                <div class="contact__perso">
-                    <h3>AARON BUKASA</h3>
-                    <a href="tel:+243816213580">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
-                            <path d="M760-480q0-117-81.5-198.5T480-760v-80q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-480h-80Zm-160 0q0-50-35-85t-85-35v-80q83 0 141.5 58.5T680-480h-80Zm198 360q-125 0-247-54.5T329-329Q229-429 174.5-551T120-798q0-18 12-30t30-12h162q14 0 25 9.5t13 22.5l26 140q2 16-1 27t-11 19l-97 98q20 37 47.5 71.5T387-386q31 31 65 57.5t72 48.5l94-94q9-9 23.5-13.5T670-390l138 28q14 4 23 14.5t9 23.5v162q0 18-12 30t-30 12ZM241-600l66-66-17-94h-89q5 41 14 81t26 79Zm358 358q39 17 79.5 27t81.5 13v-88l-94-19-67 67ZM241-600Zm358 358Z"/>
-                        </svg>
-                        +243 816 21 35 80
-                    </a>
-                    <a href="mailto:aaronbukasa.mba@gmail.com">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
-                            <path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"/>
-                        </svg>
-                        aaronbukasa.mba@gmail.com
-                    </a>
-                    <p>
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
-                            <path d="M480-480q33 0 56.5-23.5T560-560q0-33-23.5-56.5T480-640q-33 0-56.5 23.5T400-560q0 33 23.5 56.5T480-480Zm0 294q122-112 181-203.5T720-552q0-109-69.5-178.5T480-800q-101 0-170.5 69.5T240-552q0 71 59 162.5T480-186Zm0 106Q319-217 239.5-334.5T160-552q0-150 96.5-239T480-880q127 0 223.5 89T800-552q0 100-79.5 217.5T480-80Zm0-480Z"/>
-                        </svg>
-                        Lubunbashi / RDC
-                    </p>
-                    <div class="links-sociaux">
-                        <a href="https://www.linkedin.com/in/aaron-bukasa-bb84b42a0?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                            aria-label="LinkedIn" role="img"
-                            viewBox="0 0 512 512"
-                            stroke="#ffffff" fill="#484873"><rect
-                            width="512" height="512"
-                            rx="15%"/><circle cx="142" cy="138" r="37" fill="#ffffff" /><path stroke-width="66" d="M244 194v198M142 194v198"/><path d="M276 282c0-20 13-40 36-40 24 0 33 18 33 45v105h66V279c0-61-32-89-76-89-34 0-51 19-59 32" fill="#ffffff"/></svg>
+                <h2>CONTACT</h2>
+                <div>
+                    <div class="contact__perso">
+                        <h3>AARON BUKASA</h3>
+                        <a href="tel:+243816213580">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                                <path d="M760-480q0-117-81.5-198.5T480-760v-80q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-480h-80Zm-160 0q0-50-35-85t-85-35v-80q83 0 141.5 58.5T680-480h-80Zm198 360q-125 0-247-54.5T329-329Q229-429 174.5-551T120-798q0-18 12-30t30-12h162q14 0 25 9.5t13 22.5l26 140q2 16-1 27t-11 19l-97 98q20 37 47.5 71.5T387-386q31 31 65 57.5t72 48.5l94-94q9-9 23.5-13.5T670-390l138 28q14 4 23 14.5t9 23.5v162q0 18-12 30t-30 12ZM241-600l66-66-17-94h-89q5 41 14 81t26 79Zm358 358q39 17 79.5 27t81.5 13v-88l-94-19-67 67ZM241-600Zm358 358Z"/>
+                            </svg>
+                            +243 816 21 35 80
                         </a>
-                        <a href="https://github.com/Aaron-bukasa" target="_blank">
-                            <svg width="800px" height="800px" viewBox="0 -0.5 24 24" id="meteor-icon-kit__regular-github" fill="#484873" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.2047 0.00001C6.56031 -0.005731 1.74628 4.08615 0.842541 9.6577C-0.061195 15.2293 3.2126 20.6331 8.56941 22.4118C9.14823 22.5177 9.35294 22.1577 9.35294 21.8541C9.35294 21.5506 9.35294 20.8588 9.35294 19.8988C6.14117 20.5977 5.46353 18.3529 5.46353 18.3529C5.25046 17.6572 4.79779 17.0595 4.18588 16.6659C3.14823 15.96 4.27059 15.96 4.27059 15.96C5.00761 16.0641 5.65578 16.5014 6.02823 17.1459C6.34368 17.7179 6.87393 18.1406 7.50179 18.3208C8.12965 18.5009 8.8034 18.4236 9.37411 18.1059C9.41842 17.5252 9.66876 16.9794 10.08 16.5671C7.5247 16.2777 4.84235 15.2894 4.84235 10.92C4.82481 9.7786 5.24688 8.67412 6.02117 7.8353C5.67632 6.84285 5.71662 5.7571 6.13412 4.79295C6.13412 4.79295 7.10117 4.48236 9.29647 5.97177C11.1816 5.45419 13.1713 5.45419 15.0565 5.97177C17.2518 4.48236 18.2118 4.79295 18.2118 4.79295C18.6351 5.74689 18.6854 6.82486 18.3529 7.81412C19.1272 8.65294 19.5493 9.7574 19.5318 10.8988C19.5318 15.3177 16.8424 16.2847 14.28 16.5459C14.8359 17.1047 15.1218 17.8774 15.0635 18.6635C15.0635 20.2024 15.0635 21.4447 15.0635 21.8188C15.0635 22.1929 15.2682 22.4824 15.8541 22.3694C21.1473 20.5447 24.3569 15.1728 23.4554 9.6469C22.5539 4.1211 17.8034 0.04779 12.2047 0.00001z"/></svg>
+                        <a href="mailto:aaronbukasa.mba@gmail.com">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                                <path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"/>
+                            </svg>
+                            aaronbukasa.mba@gmail.com
                         </a>
+                        <p>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                                <path d="M480-480q33 0 56.5-23.5T560-560q0-33-23.5-56.5T480-640q-33 0-56.5 23.5T400-560q0 33 23.5 56.5T480-480Zm0 294q122-112 181-203.5T720-552q0-109-69.5-178.5T480-800q-101 0-170.5 69.5T240-552q0 71 59 162.5T480-186Zm0 106Q319-217 239.5-334.5T160-552q0-150 96.5-239T480-880q127 0 223.5 89T800-552q0 100-79.5 217.5T480-80Zm0-480Z"/>
+                            </svg>
+                            Lubunbashi / RDC
+                        </p>
+                        <div class="links-sociaux">
+                            <a href="https://www.linkedin.com/in/aaron-bukasa-bb84b42a0?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                aria-label="LinkedIn" role="img"
+                                viewBox="0 0 512 512"
+                                stroke="#ffffff" fill="#484873"><rect
+                                width="512" height="512"
+                                rx="15%"/><circle cx="142" cy="138" r="37" fill="#ffffff" /><path stroke-width="66" d="M244 194v198M142 194v198"/><path d="M276 282c0-20 13-40 36-40 24 0 33 18 33 45v105h66V279c0-61-32-89-76-89-34 0-51 19-59 32" fill="#ffffff"/></svg>
+                            </a>
+                            <a href="https://github.com/Aaron-bukasa" target="_blank">
+                                <svg width="800px" height="800px" viewBox="0 -0.5 24 24" id="meteor-icon-kit__regular-github" fill="#484873" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.2047 0.00001C6.56031 -0.005731 1.74628 4.08615 0.842541 9.6577C-0.061195 15.2293 3.2126 20.6331 8.56941 22.4118C9.14823 22.5177 9.35294 22.1577 9.35294 21.8541C9.35294 21.5506 9.35294 20.8588 9.35294 19.8988C6.14117 20.5977 5.46353 18.3529 5.46353 18.3529C5.25046 17.6572 4.79779 17.0595 4.18588 16.6659C3.14823 15.96 4.27059 15.96 4.27059 15.96C5.00761 16.0641 5.65578 16.5014 6.02823 17.1459C6.34368 17.7179 6.87393 18.1406 7.50179 18.3208C8.12965 18.5009 8.8034 18.4236 9.37411 18.1059C9.41842 17.5252 9.66876 16.9794 10.08 16.5671C7.5247 16.2777 4.84235 15.2894 4.84235 10.92C4.82481 9.7786 5.24688 8.67412 6.02117 7.8353C5.67632 6.84285 5.71662 5.7571 6.13412 4.79295C6.13412 4.79295 7.10117 4.48236 9.29647 5.97177C11.1816 5.45419 13.1713 5.45419 15.0565 5.97177C17.2518 4.48236 18.2118 4.79295 18.2118 4.79295C18.6351 5.74689 18.6854 6.82486 18.3529 7.81412C19.1272 8.65294 19.5493 9.7574 19.5318 10.8988C19.5318 15.3177 16.8424 16.2847 14.28 16.5459C14.8359 17.1047 15.1218 17.8774 15.0635 18.6635C15.0635 20.2024 15.0635 21.4447 15.0635 21.8188C15.0635 22.1929 15.2682 22.4824 15.8541 22.3694C21.1473 20.5447 24.3569 15.1728 23.4554 9.6469C22.5539 4.1211 17.8034 0.04779 12.2047 0.00001z"/></svg>
+                            </a>
+                        </div>
                     </div>
+                    <form action="" method="post" class="contact__form">
+                        <div class="name">
+                            <label for="name">Nom*</label>
+                            <input type="text" id="name" name="name">
+                        </div>
+                        <div class="email">
+                            <label for="email">Mail*</label>
+                            <input type="email" id="email" name="email">
+                        </div>
+                        <div class="message">
+                            <label for="message">Message</label>
+                            <textarea name="" id="message" cols="30" rows="10"></textarea>
+         
+                        </div>
+                        <div class="validation-right">
+                            <input type="checkbox" id="validation-right" name="validation-right">
+                            <label for="validation-right">Je consens par la présente à ce que ces données soient stockées et traitées dans le but d'établir un contact. je sais que je peux révoquer mon consentement à tout moment*</label>
+                        </div>
+                        <p>Veillez remplir tous les champs obligatoires.</p>
+                        <button>Envoyer</button>
+                    </form>
                 </div>
-                <form action="" method="post" class="contact__form">
-                    <div class="name">
-                        <label for="name">Nom*</label>
-                        <input type="text" id="name" name="name">
-                    </div>
-                    <div class="email">
-                        <label for="email">Mail*</label>
-                        <input type="email" id="email" name="email">
-                    </div>
-                    <div class="message">
-                        <label for="message">Message</label>
-                        <textarea name="" id="message" cols="30" rows="10"></textarea>
-     
-                    </div>
-                    <div class="validation-right">
-                        <input type="checkbox" id="validation-right" name="validation-right">
-                        <label for="validation-right">Je consens par la présente à ce que ces données soient stockées et traitées dans le but d'établir un contact. je sais que je peux révoquer mon consentement à tout moment*</label>
-                    </div>
-                    <p>Veillez remplir tous les champs obligatoires.</p>
-                    <button>Envoyer</button>
-                </form>
             </div>
-            <div class="copyRight"></div>
+            <div class="copyRight">
+                copyRight (c) Aaron bukasa 2023
+            </div>
         </footer>
     </div>
 </body>
