--- a/pages/services.html
+++ b/pages/services.html
@@ -3,47 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
+    <title>SERVICES</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./styles/services.css">
+    <script src="../app.js" defer></script>
 </head>
 <body>
+    <div id="container">
+        <header class="header">
+            <nav class="header__nav">
+                <div class="header__nav__logo">
+                    <a href="../index.html">Aaron <span>dev</span></a>
+                </div>
+                <div>
+                    <ul class="header__nav__links">
+                        <li><a href="https://aaron-bukasa.github.io/Aaron_bukasa-Curriculum_vitae" target="_blank">ABOUT</a></li>
+                        <li><a href="./services.html">SERVICES</a></li>
+                        <li><a href="./portfolio.html">PORTFOLIO</a></li>
+                        <li><a href="./contact.html">CONTACT</a></li>
+                    </ul>
+                    <div class="header__nav__btns">
+                        <div class="btn__theme">
+                            <div class="btn__theme-light">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M480-360q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Zm0 80q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Zm326-268Z"/></svg>
+                            </div>
+                            <div class="btn__theme-dark">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M380-160q133 0 226.5-93.5T700-480q0-133-93.5-226.5T380-800h-21q-10 0-19 2 57 66 88.5 147.5T460-480q0 89-31.5 170.5T340-162q9 2 19 2h21Zm0 80q-53 0-103.5-13.5T180-134q93-54 146.5-146T380-480q0-108-53.5-200T180-826q46-27 96.5-40.5T380-880q83 0 156 31.5T663-763q54 54 85.5 127T780-480q0 83-31.5 156T663-197q-54 54-127 85.5T380-80Zm80-400Z"/></svg>
+                            </div>
+                        </div>
+                        <div class="btn-menu">
+                            <div class="btn__menu-open">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
+                            </div>
+                            <div class="btn__menu-close">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <div class="header__bannere">
+                <img src="../img/lee-campbell.jpg" alt="bannere">
+                <h1>SERVICES</h1>
+            </div>
+        </header>
+        <main>
+            <section id="dev__web">
+                <h2 class="dev__web__title">Developpement Web</h2>
+                <div class="dev__web__content section__content">
+                    <p>
+                        Développeur Web expérimenté avec une expertise en conception, développement et maintenance de sites Web et d'applications Web. Maîtrise des technologies HTML, CSS, JavaScript, PHP, MySQL et React.
+                    </p>
+                    <p>
+                        Je suis spécialisé dans la création de sites Web et d'applications Web de haute qualité qui sont à la fois attrayants et fonctionnels. Je travaille en étroite collaboration avec mes clients pour comprendre leurs besoins et créer des solutions qui répondent à leurs attentes.
+                    </p>                
+                    <p>
+                        J'ai une passion pour le développement web et je suis toujours à la recherche de nouveaux défis. Je suis un excellent communicateur et je suis capable de travailler de manière indépendante ou en équipe.
+                    </p>
+                    <p>
+                        Je suis disponible pour des projets à temps plein, à temps partiel ou freelance. Si vous avez un projet de développement web en tête, n'hésitez pas à me contacter.
+                    </p>
+                    <div class="dev__web__carousel">
+                        <img src="../img/web_dev.png" alt="creation de site web" >
+                        <img src="../img/clement-helardot.jpg" class="img-mobile" alt="">
+                        <img src="../img/christopher-gower-m_HRfLhgABo-unsplash.jpg" alt="">
+                    </div>           
+                </div>
+            </section>
+            <section id="dev__logiciel">
+                <h2 class="dev__logiciel__title">Developpement logiciel</h2>
+                <div class="dev__logiciel__title section__content">
+                    <p>
+                        Je suis un développeur logiciel expérimenté avec une passion pour créer des applications logicielles innovantes et efficaces. Je maîtrise les dernières technologies et tendances du développement logiciel, et je suis toujours à la recherche de nouvelles façons d'améliorer mon travail.
+                    </p>
+                    <p>
+                        Je suis compétent dans les langages de programmation suivants : JavaScript et MySQL. J'ai également une expérience dans le développement de logiciels pour une variété d'industries, notamment la finance, la santé et la technologie.
+                    </p>
+                    <p>
+                        Je travaille en étroite collaboration avec mes clients pour comprendre leurs besoins et leurs objectifs. Je leur propose ensuite des solutions personnalisées qui répondent à leurs besoins spécifiques. Je suis également disponible pour fournir un soutien et une maintenance continus après la mise en œuvre du projet.
+                    </p>
+                    <ul class="skills">
+                        <h3>SKILLS</h3>
+                        <li>JavaScript</li>
+                        <li>ReactJs</li>
+                        <li>NodeJs</li>
+                        <li>MySQL</li>
 
-    <!-- Developpement Web
-
-    Développeur Web expérimenté avec une expertise en conception, développement et maintenance de sites Web et d'applications Web. Maîtrise des technologies HTML, CSS, JavaScript, PHP, MySQL et React.
-
-    Je suis spécialisé dans la création de sites Web et d'applications Web de haute qualité qui sont à la fois attrayants et fonctionnels. Je travaille en étroite collaboration avec mes clients pour comprendre leurs besoins et créer des solutions qui répondent à leurs attentes.
-
-    Voici quelques exemples de mon travail :
-
-    Site Web de commerce électronique pour une entreprise de vente de vêtements
-    Application mobile pour une entreprise de livraison de nourriture
-    Intranet pour une entreprise de services professionnels
-    J'ai une passion pour le développement web et je suis toujours à la recherche de nouveaux défis. Je suis un excellent communicateur et je suis capable de travailler de manière indépendante ou en équipe.
-
-    Je suis disponible pour des projets à temps plein, à temps partiel ou freelance. Si vous avez un projet de développement web en tête, n'hésitez pas à me contacter.
-
-
-    Developpement logiciel
-
-    Je suis un développeur logiciel expérimenté avec une passion pour créer des applications logicielles innovantes et efficaces. Je maîtrise les dernières technologies et tendances du développement logiciel, et je suis toujours à la recherche de nouvelles façons d'améliorer mon travail.
-
-    Je suis compétent dans les langages de programmation suivants : Java, C++, Python, JavaScript et SQL. J'ai également une expérience dans le développement de logiciels pour une variété d'industries, notamment la finance, la santé et la technologie.
-
-    Je travaille en étroite collaboration avec mes clients pour comprendre leurs besoins et leurs objectifs. Je leur propose ensuite des solutions personnalisées qui répondent à leurs besoins spécifiques. Je suis également disponible pour fournir un soutien et une maintenance continus après la mise en œuvre du projet.
-
-    Une liste des technologies et des frameworks que vous maîtrisez.
-
-
-    Gestionnaire financière
-
-    Je suis un gestionnaire financier expérimenté avec une passion pour aider les entreprises à atteindre leurs objectifs financiers. Je maîtrise les dernières techniques et tendances en matière de gestion financière, et je suis toujours à la recherche de nouvelles façons d'améliorer mes services.
-
-    Je suis titulaire d'un diplôme en gestion financière de l'Université de Lubumbashi, UNILU en sigle. J'ai également une expérience de 3 années dans la gestion financière, notamment dans les secteurs de commerce.
-
-    Voici un exemple de mon travail :
-
-    J'ai aidé une entreprise à augmenter son chiffre d'affaire de  27% en diversifiant sa gamme des produits.
-
-    Je travaille en étroite collaboration avec mes clients pour comprendre leurs besoins et leurs objectifs financiers. Je leur propose ensuite des solutions personnalisées qui répondent à leurs besoins spécifiques. Je suis également disponible pour fournir un soutien et une supervision continus après la mise en œuvre de la solution. -->
+                    </ul>
+                </div>
+            </section>
+            <section id="gestion__fin">
+                <h2 class="gestion__fin__title">Gestion financière</h2>
+                <div class="gestion__fin__content section__content">
+                    <p>
+                        Je suis un gestionnaire financier expérimenté avec une passion pour aider les entreprises à atteindre leurs objectifs financiers. Je maîtrise les dernières techniques et tendances en matière de gestion financière, et je suis toujours à la recherche de nouvelles façons d'améliorer mes services.
+                    </p>
+                    <p>
+                        Je suis un gestionnaire financier expérimenté avec une passion pour aider les entreprises à atteindre leurs objectifs financiers. Je maîtrise les dernières techniques et tendances en matière de gestion financière, et je suis toujours à la recherche de nouvelles façons d'améliorer mes services.
+                    </p>
+                    <p>
+                        Je suis titulaire d'un diplôme en gestion financière de l'Université de Lubumbashi, UNILU en sigle. J'ai également une expérience de 3 années dans la gestion financière, notamment dans les secteurs de commerce.
+                    </p>
+                    <p>
+                        Je travaille en étroite collaboration avec mes clients pour comprendre leurs besoins et leurs objectifs financiers. Je leur propose ensuite des solutions personnalisées qui répondent à leurs besoins spécifiques. Je suis également disponible pour fournir un soutien et une supervision continus après la mise en œuvre de la solution.
+                    </p>
+                    <div class='experiences'>
+                        <p>
+                            "J'ai aidé une entreprise à augmenter son chiffre d'affaire de  27% en diversifiant sa gamme des produits."
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="copyRight">
+                copyRight (c) Aaron bukasa 2023
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
